# UBKLib

./: .gitmodules  CMakeLists.txt  README.md
TODO/: bugs.txt  changes.txt
libs/: CMakeLists.txt  ubk.cppm
libs/field_models/: CMakeLists.txt  field_models.cppm  traits.cppm
libs/field_models/electric_potentials/: cross_tail.cppm
libs/field_models/magnetic_fields/: dipole.cppm  igrf13.cppm  ts89.cppm
libs/include/UBK/: macros.hpp
libs/seed_points/: CMakeLists.txt  seed_points.cppm
libs/string_helpers/: CMakeLists.txt  string_helpers.cppm
libs/tracer/: CMakeLists.txt  tracer.cppm
libs/utils/: CMakeLists.txt  check.cppm  math.cppm  utils.cppm
samples/: CMakeLists.txt  sample.cpp  sample_basic.cpp  sample_k0.cpp
validation/: CMakeLists.txt  test_tracer.cpp  test_utils.cpp
